internal/testdata/node/ingress-templates/ingress-20/performance.example.com.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/watch: "false"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    lagoon.sh/prBaseBranch: my-branch
    lagoon.sh/prHeadBranch: main
    lagoon.sh/prNumber: "4841"
    lagoon.sh/version: v2.7.x
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Robots-Tag "noindex, nofollow";
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: performance.example.com
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: custom-ingress
    helm.sh/chart: custom-ingress-0.1.0
    lagoon.sh/autogenerated: "false"
    lagoon.sh/buildType: pullrequest
    lagoon.sh/environment: pr-4841
    lagoon.sh/environmentType: development
    lagoon.sh/project: example-project
    lagoon.sh/service: performance.example.com
    lagoon.sh/service-type: custom-ingress
  name: performance.example.com
spec:
  rules:
  - host: performance.example.com
    http:
      paths:
      - backend:
          service:
            name: node
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - performance.example.com
    secretName: performance.example.com-tls
status:
  loadBalancer: {}
